# m365-mailer

./: .gitignore  README.md  mailer.py  pyproject.toml  sample_mailer_config.py
